# PositroniumSimulation

./: README.md
Ver1_Claude/: CMakeLists.txt  README.md  sim.mac
Ver1_Claude/inc/: PsEventData.hh  PsFormationMessenger.hh  PsFormationProcess.hh  PsSimActionInitialization.hh  PsSimDetectorConstruction.hh  PsSimDetectorMessenger.hh  PsSimEventAction.hh  PsSimFormationPhysics.hh  PsSimHit.hh  PsSimOutputMessenger.hh  PsSimPhysicsList.hh  PsSimPrimaryGeneratorAction.hh  PsSimRunAction.hh  PsSimSensitiveDetector.hh
Ver1_Claude/result_cache/root_file/: Observable1.C  README.md
Ver1_Claude/src/: PsFormationMessenger.cc  PsFormationProcess.cc  PsSimActionInitialization.cc  PsSimDetectorConstruction.cc  PsSimDetectorMessenger.cc  PsSimEventAction.cc  PsSimFormationPhysics.cc  PsSimHit.cc  PsSimOutputMessenger.cc  PsSimPhysicsList.cc  PsSimPrimaryGeneratorAction.cc  PsSimRunAction.cc  PsSimSensitiveDetector.cc  main.cc
